--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,8 @@
 @import "normalize";
 @import "variables";
 @import "common";
+@import "header";
+@import "footer";
 @import "home";
 @import "projects";
 @import "project";
