--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,9 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   {%- include head.html -%}
   <body>
+    {%- include header.html -%}
     {{ content }}
   </body>
-  
   {%- include feedback-form.html -%}
   <script src="{{ site.baseurl | prepend: site.url }}/assets/js/script.js"></script>
 </html>
