--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -1,8 +1,39 @@
+.h2 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: center;
+    letter-spacing: -0.5px;
+    color: var(--color-dark);
+}
+
+.h3 {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 40px;
+}
+
+.h4 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    text-align: center;
+    color: var(--color-dark);
+    opacity: 0.56;
+}
+
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .container {
     max-width: 1280px;
     margin: 0 auto;
     padding: 100px 40px;
 }
+
 .btn {
     //padding: 18px 56px;
     border-radius: 10px;
