--- a/_includes/home/section-how-we-work.html
+++ b/_includes/home/section-how-we-work.html
@@ -5,7 +5,7 @@
         <div class="how-we-work__items">
             <div class="how-we-work__item">
                 <div class="how-we-work__item-col">
-                    <h3 class="how-we-work__item-title">Разработка с нуля</h3>
+                    <h3 class="h3 how-we-work__item-title">Разработка с нуля</h3>
                     <p class="how-we-work__item-desc">
                         Мы поможем определить цели проекта и критерии их достижения, проведём необходимые исследования,
                         спроектируем дизайн и архитектуру. На протяжении всего проекта мы будем вашим партнёром.
@@ -18,7 +18,7 @@
             </div>
             <div class="how-we-work__item how-we-work__item--reverse">
                 <div class="how-we-work__item-col">
-                    <h3 class="how-we-work__item-title">Проектная работа</h3>
+                    <h3 class="h3 how-we-work__item-title">Проектная работа</h3>
                     <p class="how-we-work__item-desc">
                         У вас есть готовое техническое задание или концепция проекта. Мы внимательно изучим объем работ,
                         разобьем на этапы, согласуем сроки и бюджет и выдадим результат.
@@ -31,7 +31,7 @@
             </div>
             <div class="how-we-work__item">
                 <div class="how-we-work__item-col">
-                    <h3 class="how-we-work__item-title">Гибкая разработка</h3>
+                    <h3 class="h3 how-we-work__item-title">Гибкая разработка</h3>
                     <p class="how-we-work__item-desc">
                         У вас есть сложные задачи, которые требуют особого подхода. Мы будем работать спринтами, по
                         итогам которых команда проанализирует результаты и поставит приоритеты для следующего цикла.
