--- a/_includes/home/section-our-awards.html
+++ b/_includes/home/section-our-awards.html
@@ -5,24 +5,24 @@
         <div class="our-awards__items">
             <div class="our-awards__item our-awards__item-1">
                 <img src="{{ site.baseurl }}/assets/img/award.png" alt="" />
-                <h3 class="our-awards__item-title">Веб-интеграторы</h3>
+                <h3 class="h3 our-awards__item-title">Веб-интеграторы</h3>
                 <p class="our-awards__item-desc">
                     Все ключевые рейтинги, аналитика и спецпроекты агентского рынка digital-коммуникаций России.
                 </p>
             </div>
             <div class="our-awards__item our-awards__item-2">
                 <img src="{{ site.baseurl }}/assets/img/award.png" alt="" />
-                <h3 class="our-awards__item-title">Веб-интеграторы</h3>
+                <h3 class="h3 our-awards__item-title">Веб-интеграторы</h3>
                 <p class="our-awards__item-desc">Топ лучших веб-разработчиков и ведущих интеграторов интернет-решений России</p>
             </div>
             <div class="our-awards__item our-awards__item-3">
                 <img src="{{ site.baseurl }}/assets/img/award.png" alt="" />
-                <h3 class="our-awards__item-title">Мобильная разработка</h3>
+                <h3 class="h3 our-awards__item-title">Мобильная разработка</h3>
                 <p class="our-awards__item-desc">Рейтинг компаний, специализирующихся на заказной разработке мобильных приложений и мобильном маркетинге.</p>
             </div>
             <div class="our-awards__item our-awards__item-4">
                 <img src="{{ site.baseurl }}/assets/img/award.png" alt="" />
-                <h3 class="our-awards__item-title">Мобильная разработка</h3>
+                <h3 class="h3 our-awards__item-title">Мобильная разработка</h3>
                 <p class="our-awards__item-desc">
                     Рейтинг лучших поставщиков IT- услуг, заказной и веб разработки в сегменте В2В.
                 </p>
