--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -186,9 +186,6 @@
             width: 50%;
         }
         &-title {
-            font-weight: 600;
-            font-size: 40px;
-            line-height: 48px;
             color: var(--color-dark);
         }
         &-desc {
@@ -334,9 +331,9 @@
             width: 100%;
         }
         &-title {
-            font-weight: 600;
-            font-size: 40px;
-            line-height: 48px;
+            // font-weight: 600;
+            // font-size: 40px;
+            // line-height: 48px;
             text-align: center;
             color: var(--color-dark);
             margin-top: 40px;
