--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -2,6 +2,8 @@
     .hero {
         min-height: 816px;
         &__title {
+            font-size: 56px;
+            line-height: 56px;
             max-width: 880px;
         }
         &__descr {
@@ -255,9 +257,14 @@
             width: 100%;
             position: fixed;
             overflow-y: auto;
-            height: calc(100% - 400px);
+            //height: calc(100% - 400px);
+            //max-height: none;
+            //top: 400px;
+            top: 30%;
+            bottom: 0;
+            height: 70%;
             max-height: none;
-            top: 400px;
+
             &-item {
                 font-size: 16px;
                 line-height: 24px;
@@ -326,7 +333,6 @@
                 max-width: 174px;
             }
         }
-        
     }
     .our-approach {
         &__diagram {
@@ -377,6 +383,11 @@
         &__title {
             font-size: 40px;
             line-height: 40px;
+        }
+        &__descr {
+            font-size: 16px;
+            line-height: 24px;
+            max-width: 445px;
         }
         // &-filters {
         //     justify-content: flex-end;
@@ -537,6 +548,10 @@
 
 @media (max-width: 520px) {
     .why-we {
+        & .h3 {
+            font-size: 18px;
+            line-height: 24px;
+        }
         &__items {
             margin-top: 40px;
             gap: 16px;
@@ -745,6 +760,11 @@
         &__title {
             font-size: 24px;
             line-height: 28px;
+        }
+        &__descr {
+            font-size: 14px;
+            line-height: 20px;
+            max-width: 285px;
         }
         &__item {
             padding: 24px;
