--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,300;8..144,400;8..144,500;8..144,600;8..144,700&display=swap"
         rel="stylesheet"
     />
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="shortcut icon" type="image/png" href="{{ "./favicon.png" | relative_url }}">
     {%- feed_meta -%} {%- if jekyll.environment == 'production' and site.google_analytics -%} {%- include
     google-analytics.html -%} {%- endif -%}
 </head>
