--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -69,9 +69,11 @@
         }
         &__item1 {
             width: 100%;
+            margin: 0;
         }
         &__item2 {
             width: 100%;
+            margin: 24px 0 0 0;
         }
     }
     .trust-us {
@@ -92,8 +94,12 @@
         &__item {
             flex-direction: column;
             flex-direction: column-reverse;
-            padding: 40px;
-            gap: 40px;
+            & > * {
+                margin: 40px;
+            }
+            &-content {
+                width: calc(100% - 2 * 40px);
+            }
             &-title {
                 margin-top: 0;
             }
@@ -101,44 +107,41 @@
                 margin-top: 16px;
             }
             &-img {
+                height: 560px;
+                width: calc(100% - 2 * 40px);
                 &--center {
-                    height: 560px;
-                    width: 100%;
                     & img {
                         max-width: 414px;
                     }
                 }
                 &--left {
-                    height: 560px;
-                    width: 100%;
                     & img {
                         right: 260px;
                     }
                 }
                 &--right {
-                    height: 560px;
-                    width: 100%;
                     & img {
                         left: 260px;
                     }
                 }
             }
-            &-content {
-                width: 100%;
-            }
         }
     }
     .project {
         &-content {
+            & > h1 {
+                font-size: 56px;
+                line-height: 56px;
+            }
             &-video {
                 flex-direction: column;
-                padding: 40px;
-                gap: 40px;
                 &__left {
-                    width: 100%;
+                    width: calc(100% - 2 * 40px);
+                    margin: 40px;
                 }
                 &__right {
-                    width: 100%;
+                    width: calc(100% - 2 * 40px);
+                    margin: 40px;
                 }
             }
         }
@@ -248,7 +251,8 @@
     }
     .dropdown {
         position: relative;
-        width: 250px;
+        //width: 250px;
+        height: 64px;
         &__input {
             font-size: 16px;
             line-height: 24px;
@@ -257,12 +261,9 @@
             width: 100%;
             position: fixed;
             overflow-y: auto;
-            //height: calc(100% - 400px);
-            //max-height: none;
-            //top: 400px;
-            top: 30%;
+            top: 40%;
             bottom: 0;
-            height: 70%;
+            height: 60%;
             max-height: none;
 
             &-item {
@@ -276,9 +277,6 @@
             justify-content: flex-end;
             &-title {
                 display: none;
-            }
-            &-components {
-                gap: 8px;
             }
         }
     }
@@ -325,6 +323,7 @@
         }
     }
     .how-we-work {
+        margin-top: calc(60px - 24px);
         &__item {
             &-col {
                 padding: 40px;
@@ -389,13 +388,8 @@
             line-height: 24px;
             max-width: 445px;
         }
-        // &-filters {
-        //     justify-content: flex-end;
-        //     &-title {
-        //         display: none;
-        //     }
-        // }
         &__item {
+            margin-top: 16px;
             &-descr {
                 margin-top: 4px;
                 font-size: 16px;
@@ -461,8 +455,8 @@
             }
             &-time {
                 margin-top: 60px;
-                gap: 16px;
                 &__left {
+                    margin-right: 8px;
                     &-title {
                         font-size: 16px;
                         line-height: 24px;
@@ -473,6 +467,7 @@
                     }
                 }
                 &__right {
+                    margin-left: 8px;
                     &-title {
                         font-size: 16px;
                         line-height: 24px;
@@ -603,6 +598,7 @@
                 "item4";
             grid-template-rows: 1fr 1fr 1fr 1fr;
             grid-template-columns: 1fr;
+            grid-gap: 16px;
         }
         &__item {
             & img {
@@ -651,8 +647,25 @@
             }
         }
     }
-    .dropdown {
-        width: 170px;
+    .project {
+        &-content {
+            &-time {
+                flex-direction: column;
+                margin-top: 40px;
+                &__left {
+                    width: 100%;
+                    padding: 16px;
+                    margin: 0;
+                    border-radius: 10px;
+                }
+                &__right {
+                    width: 100%;
+                    padding: 16px;
+                    margin: 16px 0 0 0;
+                    border-radius: 10px;
+                }
+            }
+        }
     }
 }
 
@@ -697,9 +710,10 @@
     }
     .how-we-work {
         &__items {
-            gap: 16px;
+            margin-top: calc(40px - 16px);
         }
         &__item {
+            margin-top: 16px;
             &-desc {
                 font-size: 14px;
                 line-height: 20px;
@@ -725,23 +739,19 @@
     }
     .about-team {
         &__items {
-            gap: 16px;
             margin-top: 40px;
         }
         &__item1 {
             min-height: 346px;
             &-title {
-                // font-size: 18px;
-                // line-height: 24px;
                 padding-top: 24px;
                 padding-left: 24px;
                 padding-right: 24px;
             }
         }
         &__item2 {
+            margin-top: 16px;
             &-title {
-                // font-size: 18px;
-                // line-height: 24px;
                 padding-top: 24px;
                 padding-left: 24px;
                 padding-right: 24px;
@@ -766,9 +776,22 @@
             line-height: 20px;
             max-width: 285px;
         }
+
+        &-filters {
+            &-components {
+                & :first-child {
+                    margin-right: 8px;
+                }
+            }
+        }
+
         &__item {
-            padding: 24px;
-            gap: 24px;
+            & > * {
+                margin: 24px;
+            }
+            &-content {
+                width: calc(100% - 2 * 24px);
+            }
             &-descr {
                 margin-top: 4px;
                 font-size: 14px;
@@ -778,22 +801,21 @@
                 margin-top: 42px;
             }
             &-img {
+                height: 276px;
+                width: calc(100% - 2 * 24px);
                 &--center {
-                    height: 276px;
                     & img {
                         top: 24px;
                         max-width: 206px;
                     }
                 }
                 &--left {
-                    height: 276px;
                     & img {
                         top: 24px;
                         right: 24px;
                     }
                 }
                 &--right {
-                    height: 276px;
                     & img {
                         top: 24px;
                         left: 24px;
@@ -820,11 +842,19 @@
         }
     }
     .dropdown {
+        height: 56px;
         &__options {
             &-item {
                 font-size: 14px;
                 line-height: 20px;
             }
+        }
+        &-spheres {
+            width: 45%;
+        }
+
+        &-technologies {
+            width: 55%;
         }
     }
     .feedback {
@@ -899,24 +929,15 @@
             &-item-half {
                 width: 70%;
             }
-            &-time {
-                flex-direction: column;
-                margin-top: 40px;
-                &__left {
-                    width: 100%;
-                    padding: 16px;
-                    border-radius: 10px;
-                }
-                &__right {
-                    width: 100%;
-                    padding: 16px;
-                    border-radius: 10px;
-                }
-            }
+
             &-video {
-                gap: 16px;
-                padding: 16px;
+                &__left {
+                    margin: 16px;
+                    width: calc(100% - 2 * 16px);
+                }
                 &__right {
+                    margin: 16px;
+                    width: calc(100% - 2 * 16px);
                     &-title {
                         font-size: 18px;
                         line-height: 24px;
@@ -976,9 +997,6 @@
         &__items {
             padding: 24px;
         }
-    }
-    .dropdown {
-        width: 130px;
     }
     .feedback {
         &__body {
