--- a/_sass/_media.scss
+++ b/_sass/_media.scss
@@ -81,11 +81,6 @@
             flex-direction: column;
         }
     }
-    .dropdown {
-        &__options {
-            width: 450px;
-        }
-    }
     .projects {
         &__title {
             font-size: 56px;
@@ -258,25 +253,37 @@
             line-height: 24px;
         }
         &__options {
-            width: 100%;
             position: fixed;
-            overflow-y: auto;
-            top: 40%;
             bottom: 0;
-            height: 60%;
-            max-height: none;
-
+            top: unset;
+            left: 0;
+            right: 0;
+            &-spheres {
+                width: 100%;
+                height: 80%;
+            }
+            &-technologies {
+                width: 100%;
+            }
+            &-line {
+                display: block;
+            }
             &-item {
                 font-size: 16px;
                 line-height: 24px;
-            }
-        }
-    }
-    .projects {
-        &-filters {
-            justify-content: flex-end;
-            &-title {
-                display: none;
+                &.active {
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        top: 10px;
+                        right: 30px;
+                        width: 10px;
+                        height: 15px;
+                        border-right: 3px solid #367CF4;
+                        border-bottom: 3px solid #367CF4;
+                        transform: rotate(45deg);
+                      }
+                }
             }
         }
     }
@@ -377,7 +384,6 @@
             grid-template-columns: 1fr 1fr;
         }
     }
-
     .projects {
         &__title {
             font-size: 40px;
@@ -423,7 +429,6 @@
             }
         }
     }
-
     .project {
         &-content {
             & > h1 {
@@ -494,7 +499,6 @@
             }
         }
     }
-
     .feedback {
         &__body {
             height: 100vh;
@@ -502,7 +506,6 @@
             width: 100%;
         }
     }
-
     .footer {
         &__title {
             font-size: 40px;
@@ -779,7 +782,7 @@
 
         &-filters {
             &-components {
-                & :first-child {
+                & > :first-child {
                     margin-right: 8px;
                 }
             }
@@ -886,7 +889,6 @@
             }
         }
     }
-
     .project {
         &-content {
             & > h1 {
