--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,7 +4,65 @@
     top: 0;
     width: 100%;
     height: 96px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    &__container {
+        max-width: 1280px;
+        margin: 0 auto;
+        padding: 40px;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    &-logo {
+        display: flex;
+        align-items: center;
+    }
+    &-link {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: #333333;
+    }
+    &-right {
+        & > :last-child {
+            margin-left: 100px;
+        }
+    }
+}
+.burger {
+    position: relative;
+    width: 25px;
+    height: 20px;
+    display: none;
+    border: none;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    &::before,
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: var(--color-dark);
+        transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, bottom 0.3s ease-in-out;
+    }
+    &::before {
+        top: 0;
+    }
+
+    &::after {
+        bottom: 0;
+    }
+    &__line {
+        position: absolute;
+        left: 0;
+        top: 50%;
+        width: 100%;
+        height: 2px;
+        background-color: var(--color-dark);
+        transform: translateY(-50%);
+        transition: opacity 0.3s ease-in-out;
+    }
 }
